# imt1082-oblig3

./: .gitignore  CMakeLists.txt  main.cpp
